objects/Contact_Method__c/Contact_Method__c.object-meta.xml
<CustomObject>
    <label>Contact Method</label>
    <nameField>
        <displayFormat>CMID-{0000}</displayFormat>
        <label>Contact Method ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Method</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>