objects/Contact_Method__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>