objects/Contact_Method__c/fields/Answer_Back__c.field-meta.xml
<CustomField>
    <fullName>Answer_Back__c</fullName>
    <label>Answer Back</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>