objects/Contact_Method__c/fields/Available_Period_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Available_Period_End_DateTime__c</fullName>
    <label>Available Period End DateTime</label>
    <type>DateTime</type>
</CustomField>