objects/Contact_Method__c/fields/Contact_Method_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Subtype__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Method_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <default>true</default>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>