objects/Contact_Method__c/fields/Contact_Usage__c.field-meta.xml
<CustomField>
    <fullName>Contact_Usage__c</fullName>
    <label>Contact Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>