objects/Contact_Method__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <label>Ext.</label>
    <type>Phone</type>
</CustomField>