objects/Contact_Method__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone No.</label>
    <type>Phone</type>
</CustomField>