objects/Contact_Method__c/fields/Virtual_Address__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Address__c</fullName>
    <label>Virtual Address</label>
    <type>TextArea</type>
</CustomField>